MDL-56762 Theme: Fix browser main content scrollbars in RTL mode

--- a/theme/boost/scss/moodle/sticky-footer.scss
+++ b/theme/boost/scss/moodle/sticky-footer.scss
@@ -5,6 +5,10 @@
 html,
 body {
     height: 100%;
+    overflow-y: auto;
+}
+#page-grade-report-grader-index {
+    overflow-y: unset;
 }
 
 #page-wrapper {
